# PotholeDetectionSystem

./: .gitignore  CMakeLists.txt  PotholeDetectionConfig.cmake.in  README.md  main.cpp
SCTM_VR_Potholes_Detection/: Bayes.cpp  Bayes.h  CascadeClassifier.cpp  CascadeClassifier.h  DataStructures.cpp  DataStructures.h  FeaturesExtraction.cpp  FeaturesExtraction.h  FeaturesExtractionUtils.cpp  FeaturesExtractionUtils.h  GradientElaboration.cpp  GradientElaboration.h  HOG.cpp  HOG.h  HistogramElaboration.cpp  HistogramElaboration.h  MLUtils.cpp  MLUtils.h  Main.cpp  MathUtils.cpp  MathUtils.h  Optional.h  SVM.cpp  SVM.h  Segmentation.cpp  Segmentation.h  SuperPixelingUtils.cpp  SuperPixelingUtils.h  TestSVM.cpp  Utils.cpp  Utils.h  scrapcode.txt  scrapcode_segmentation.cpp
config/: config.json
include/phdetection/: bayes.hpp  core.hpp  fe_utils.hpp  features_extraction.hpp  gradient.hpp  histogram.hpp  hog.hpp  io.hpp  math.hpp  ml_utils.hpp  ontologies.hpp  optional.hpp  segmentation.hpp  superpixeling.hpp  svm.hpp
src/: bayes.cpp  core.cpp  fe_utils.cpp  features_extraction.cpp  gradient.cpp  histogram.cpp  hog.cpp  io.cpp  math.cpp  ml_utils.cpp  ontologies.cpp  segmentation.cpp  superpixeling.cpp  svm.cpp
